<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_cow"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/input_title_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_brinco_cow"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_title_brinco"
        app:layout_constraintEnd_toEndOf="@+id/input_name_cow"
        app:layout_constraintStart_toStartOf="@+id/input_name_cow"
        app:layout_constraintTop_toBottomOf="@+id/input_name_cow">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_date_cow"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/input_title_data_nascimento"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black_light"
        app:layout_constraintEnd_toEndOf="@+id/input_brinco_cow"
        app:layout_constraintStart_toStartOf="@+id/input_brinco_cow"
        app:layout_constraintTop_toBottomOf="@+id/input_brinco_cow" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/input_title_lactacao"
        android:textColor="@color/black_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/btn_date_cow"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_cow" />

    <RadioGroup
        android:id="@+id/rGlactacaoCow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/rBlactacaoS"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/input_title_sim"
            android:textColor="@color/black_light"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rBlactacaoN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/input_title_nao"
            android:textColor="@color/black_light"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>