<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/input_title_lactacao"
        android:textColor="@color/black_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/input_data_edit_cow"
        app:layout_constraintTop_toBottomOf="@+id/input_data_edit_cow" />

    <RadioGroup
        android:id="@+id/rGlactacaoCow_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView110">

        <RadioButton
            android:id="@+id/rBlactacaoS_edit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/input_title_sim"
            android:textColor="@color/black_light"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rBlactacaoN_edit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/input_title_nao"
            android:textColor="@color/black_light"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/input_name_cow_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/input_brinco_cow_edit"
        app:layout_constraintStart_toEndOf="@+id/input_brinco_cow_edit"
        app:layout_constraintTop_toTopOf="@+id/input_brinco_cow_edit"
        tools:text="TextView" />

    <TextView
        android:id="@+id/input_brinco_cow_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />


    <TextView
        android:id="@+id/input_data_edit_cow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/input_brinco_cow_edit"
        app:layout_constraintTop_toBottomOf="@+id/input_brinco_cow_edit"
        tools:text="TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>